[package]
name = "watchfiles_rust_notify"
version = "1.0.4"
edition = "2021"
license = "MIT"
homepage = "https://github.com/samuelcolvin/watchfiles"
repository = "https://github.com/samuelcolvin/watchfiles/watchfiles.git"
readme = "README.md"
include = [
    "/pyproject.toml",
    "/README.md",
    "/LICENSE",
    "/Makefile",
    "/src",
    "/watchfiles",
    "/tests",
    "/uv.lock",
    "/.cargo",
    "!__pycache__",
    "!tests/.mypy_cache",
    "!tests/.pytest_cache",
    "!*.so",
]
rust-version = "1.63"

[dependencies]
crossbeam-channel = "0.5.12"
notify = { version = "7.0.0" }
pyo3 = { version = "0.23.3", features = ["extension-module", "generate-import-lib"] }

[lib]
name = "_rust_notify"
crate-type = ["cdylib"]
